--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
 		"cloudkid-debug": "*",
 		"cloudkid-namespace": "*",
 		"pixi.js": "https://github.com/CloudKidStudio/pixi.js.git#^1.6.2",
+		"filesaver": "https://github.com/eligrey/FileSaver.js.git",
 		"cloudkid-framework": "*",
 		"cloudkid-tasks": "framework",
 		"cloudkid-pixi-display": "*",
