--- a/deploy/assets/config/config.json
+++ b/deploy/assets/config/config.json
@@ -23,6 +23,11 @@
 			"images" : ["smokeparticle"]
 		},
 		{
+			"id" : "smoke",
+			"config" : "assets/config/smoke.json",
+			"images" : ["smokeparticle"]
+		},
+		{
 			"id" : "explosion",
 			"config" : "assets/config/explosion.json",
 			"images" : ["particle"]
