New examples and defaults!

--- a/deploy/assets/config/config.json
+++ b/deploy/assets/config/config.json
@@ -4,7 +4,18 @@
 	"images" : {
 		"particle" : "assets/images/particle.png",
 		"smokeparticle" : "assets/images/smokeparticle.png",
-		"rain" : "assets/images/rain.png"
+		"HardRain" : "assets/images/HardRain.png",
+		"Bubbles50px" : "assets/images/Bubbles50px.png",
+		"Bubbles99px" : "assets/images/Bubbles99px.png",
+		"CartoonSmoke" : "assets/images/CartoonSmoke.png",
+		"Fire" : "assets/images/Fire.png",
+		"HardCircle" : "assets/images/HardCircle.png",
+		"Pixel25px" : "assets/images/Pixel25px.png",
+		"Pixel50px" : "assets/images/Pixel50px.png",
+		"Pixel100px" : "assets/images/Pixel100px.png",
+		"Snow50px" : "assets/images/Snow50px.png",
+		"Snow100px" : "assets/images/Snow100px.png",
+		"Sparks" : "assets/images/Sparks.png"
 	},
 	"emitters" : [
 		{
@@ -15,12 +26,12 @@
 		{
 			"id" : "flame",
 			"config" : "assets/config/flame.json",
-			"images" : ["particle"]
+			"images" : ["particle", "Fire"]
 		},
 		{
 			"id" : "gas",
 			"config" : "assets/config/gas.json",
-			"images" : ["smokeparticle"]
+			"images" : ["smokeparticle", "particle"]
 		},
 		{
 			"id" : "smoke",
@@ -38,6 +49,11 @@
 			"images" : ["particle"]
 		},
 		{
+			"id" : "explosion3",
+			"config" : "assets/config/explosion3.json",
+			"images" : ["particle"]
+		},
+		{
 			"id" : "megamanDeath",
 			"config" : "assets/config/megamanDeath.json",
 			"images" : ["particle"]
@@ -50,7 +66,52 @@
 		{
 			"id" : "rain",
 			"config" : "assets/config/rain.json",
-			"images" : ["rain"]
+			"images" : ["HardRain"]
+		},
+		{
+			"id" : "bubbles",
+			"config" : "assets/config/bubbles.json",
+			"images" : ["Bubbles99px", "Bubbles50px"]
+		},
+		{
+			"id" : "bubbleSpray",
+			"config" : "assets/config/bubbleSpray.json",
+			"images" : ["Bubbles99px", "Bubbles50px"]
+		},
+		{
+			"id" : "bubbleStream",
+			"config" : "assets/config/bubbleStream.json",
+			"images" : ["Bubbles99px", "Bubbles50px"]
+		},
+		{
+			"id" : "bubblesVertical",
+			"config" : "assets/config/bubblesVertical.json",
+			"images" : ["Bubbles99px", "Bubbles50px"]
+		},
+		{
+			"id" : "cartoonSmoke",
+			"config" : "assets/config/cartoonSmoke.json",
+			"images" : ["CartoonSmoke"]
+		},
+		{
+			"id" : "cartoonSmokeBlast",
+			"config" : "assets/config/cartoonSmokeBlast.json",
+			"images" : ["CartoonSmoke"]
+		},
+		{
+			"id" : "pixelTrail",
+			"config" : "assets/config/pixelTrail.json",
+			"images" : ["Pixel100px", "Pixel50px", "Pixel25px"]
+		},
+		{
+			"id" : "snow",
+			"config" : "assets/config/snow.json",
+			"images" : ["Snow100px", "Snow50px"]
+		},
+		{
+			"id" : "sparks",
+			"config" : "assets/config/sparks.json",
+			"images" : ["Sparks"]
 		}
 	]
 }
