--- a/deploy/assets/config/snow.json
+++ b/deploy/assets/config/snow.json
@@ -1,33 +1,50 @@
 {
 	"alpha": {
-		"start": 0.5,
-		"end": 0.5
+		"start": 0.73,
+		"end": 0.46
 	},
 	"scale": {
-		"start": 1,
-		"end": 1
+		"start": 0.15,
+		"end": 0.2
 	},
 	"color": {
 		"start": "ffffff",
 		"end": "ffffff"
 	},
 	"speed": {
-		"start": 3000,
-		"end": 3000
+		"start": 200,
+		"end": 200
 	},
 	"startRotation": {
-		"min": 65,
-		"max": 65
+		"min": 50,
+		"max": 70
 	},
 	"rotationSpeed": {
 		"min": 0,
-		"max": 0
+		"max": 200
 	},
 	"lifetime": {
-		"min": 0.81,
-		"max": 0.81
+		"min": 4,
+		"max": 4
 	},
 	"blendMode": "normal",
+	"ease": [
+		{
+			"s": 0,
+			"cp": 0.379,
+			"e": 0.548
+		},
+		{
+			"s": 0.548,
+			"cp": 0.717,
+			"e": 0.676
+		},
+		{
+			"s": 0.676,
+			"cp": 0.635,
+			"e": 1
+		}
+	],
 	"frequency": 0.004,
 	"emitterLifetime": 0,
 	"maxParticles": 1000,
@@ -38,8 +55,8 @@
 	"addAtBack": false,
 	"spawnType": "rect",
 	"spawnRect": {
-		"x": -600,
-		"y": -460,
+		"x": -500,
+		"y": -300,
 		"w": 900,
 		"h": 20
 	}
