--- a/deploy/assets/config/snow.json
+++ b/deploy/assets/config/snow.json
@@ -5,7 +5,8 @@
 	},
 	"scale": {
 		"start": 0.15,
-		"end": 0.2
+		"end": 0.2,
+		"minimumScaleMultiplier": 0.5
 	},
 	"color": {
 		"start": "ffffff",
