--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
-	"name": "ParticleEditor",
-	"version": "0.0.1",
+	"name": "PixiParticlesEditor",
+	"version": "0.1.0",
 	"dependencies": {
 		"pixi.js": "https://github.com/CloudKidStudio/pixi.js.git#^1.6.2",
 		"filesaver": "https://github.com/eligrey/FileSaver.js.git",
 		"cloudkid-framework": "*",
 		"pixi-particles": "*",
-		"normalize.css": "*"
+		"normalize.css": "*",
+		"node-webkit-app": "*"
 	}
 }
