--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "private": true,
   "dependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "~0.4.2",
     "grunt-game-builder": "*",
-    "grunt-gh-pages": "~0.9.1",
-    "load-grunt-config": "~0.13.1"
+    "load-grunt-tasks": "*",
+    "grunt-node-webkit-builder": "~0.2.2",
+    "lodash": "~2.4.1",
+    "load-grunt-config": "~0.13.1",
+    "grunt-exec": "~0.4.6"
   }
 }
