--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
 		"pixi-particles": "*",
 		"normalize.css": "*",
 		"node-webkit-app": "*",
-		"jquery": "*"
+		"jquery": "*",
+		"jquery-minicolors": "*"
 	}
 }
