--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "private": true,
   "dependencies": {
     "grunt": "~0.4.2",
-    "grunt-game-builder": "~0.3.0",
-    "load-grunt-config": "*",
+    "project-grunt": "~0.5.0",
     "grunt-node-webkit-builder": "~0.2.2",
-    "lodash": "~2.4.1",
     "grunt-exec": "~0.4.6",
     "grunt-gh-pages": "~0.9.1"
   }
