--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "private": true,
-  "dependencies": {
-    "grunt": "~0.4.2",
-    "project-grunt": "~0.5.0",
-    "grunt-node-webkit-builder": "~0.2.2",
-    "grunt-exec": "~0.4.6",
-    "grunt-gh-pages": "~0.9.1"
-  }
+	"private": true,
+	"version": "0.1.1",
+	"dependencies": {
+		"grunt": "~0.4.2",
+		"project-grunt": "~0.5.0",
+		"grunt-node-webkit-builder": "~0.2.2",
+		"grunt-exec": "~0.4.6",
+		"grunt-gh-pages": "~0.9.1"
+	}
 }
