--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
 	"name": "PixiParticlesEditor",
-	"version": "0.1.1",
+	"version": "0.2.0",
 	"dependencies": {
-		"pixi.js": "https://github.com/CloudKidStudio/pixi.js.git#^1.6.2",
+		"pixi.js": "https://github.com/CloudKidStudio/pixi.js.git",
 		"filesaver": "https://github.com/eligrey/FileSaver.js.git",
 		"bootstrap": "~3.2.0",
 		"bootstrap-touchspin": "~3.0.1",
 		"seiyria-bootstrap-slider": "~4.0.8",
-		"cloudkid-framework": "*",
+		"springroll": "*",
 		"pixi-particles": "*",
 		"normalize.css": "*",
 		"node-webkit-app": "*",
