Updated to NWjs 0.11.6

--- a/deploy/package.json
+++ b/deploy/package.json
@@ -10,7 +10,7 @@
 	"single-instance": true,
 	"window": {
 		"icon": "assets/images/icon512.png",
-		"show": false,
+		"show": true,
 		"toolbar": false,
 		"frame": true,
 		"position": "center",
