--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.2.0",
 	"dependencies": {
 		"grunt": "~0.4.2",
-		"project-grunt": "~0.5.0",
-		"grunt-node-webkit-builder": "~0.2.2",
+		"project-grunt": "*",
+		"grunt-node-webkit-builder": "~1.0.0",
 		"grunt-exec": "~0.4.6",
-		"grunt-gh-pages": "~0.9.1"
+		"grunt-gh-pages": "~0.10.0"
 	}
 }
