Added support for ring emission.

--- a/deploy/assets/config/config.json
+++ b/deploy/assets/config/config.json
@@ -1,6 +1,6 @@
 {
 	"default" : "pixieDust",
-	"spawnTypes" : ["point", "circle", "rect", "burst"],
+	"spawnTypes" : ["point", "circle", "rect", "burst", "ring"],
 	"images" : {
 		"particle" : "assets/images/particle.png",
 		"smokeparticle" : "assets/images/smokeparticle.png",
