--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,12 @@
 	"name": "PixiParticlesEditor",
 	"version": "0.2.1",
 	"dependencies": {
-		"pixi.js": "https://github.com/CloudKidStudio/pixi.js.git",
+		"pixi.js": "https://github.com/SpringRoll/pixi.js.git#3.0.9",
 		"filesaver": "https://github.com/eligrey/FileSaver.js.git",
 		"bootstrap": "~3.2.0",
 		"bootstrap-touchspin": "~3.0.1",
 		"seiyria-bootstrap-slider": "~4.0.8",
-		"springroll": "*",
+		"springroll": "~0.4.26",
 		"pixi-particles": "*",
 		"normalize.css": "*",
 		"node-webkit-app": "*",
